@@ -64,7 +64,21 @@ rem set "JAVA_OPTS=%JAVA_OPTS% -agentlib:jdwp=transport=dt_shmem,address=jboss,s
 rem # Use JBoss Modules lockless mode
 rem set "JAVA_OPTS=%JAVA_OPTS% -Djboss.modules.lockless=true"
 
+rem # Uncomment to enable the experimental JDK 11 support for ByteBuddy
+rem # ByteBuddy is the default bytecode provider of Hibernate ORM
+rem set "JAVA_OPTS=%JAVA_OPTS% -Dnet.bytebuddy.experimental=true"
+
+rem # Uncomment to run server in debug mode
+rem set "DEBUG_MODE=true"
+rem set "DEBUG_PORT=8787"
+
 rem # Uncomment this to run with a security manager enabled
 rem set "SECMGR=true"
+
+rem # Uncomment this out to control garbage collection logging
+rem set "GC_LOG=true"
+
+rem # Uncomment and edit to use a custom java.security file to override all the Java security properties
+rem set "JAVA_OPTS=%JAVA_OPTS% -Djava.security.properties==C:\path\to\custom\java.security"
 
 :JAVA_OPTS_SET
