@@ -9,6 +9,15 @@ if "%OS%" == "Windows_NT" (
   set DIRNAME=.\
 )
 
+setlocal EnableDelayedExpansion
+rem check for the security manager system property
+echo(!SERVER_OPTS! | findstr /r /c:"-Djava.security.manager" > nul
+if not errorlevel == 1 (
+    echo ERROR: The use of -Djava.security.manager has been removed. Please use the -secmgr command line argument or SECMGR=true environment variable.
+    GOTO :EOF
+)
+setlocal DisableDelayedExpansion
+
 pushd "%DIRNAME%.."
 set "RESOLVED_JBOSS_HOME=%CD%"
 popd
@@ -38,6 +47,12 @@ if "x%JAVA_HOME%" == "x" (
   set "JAVA=%JAVA_HOME%\bin\java"
 )
 
+rem set default modular jvm parameters
+setlocal EnableDelayedExpansion
+call "!DIRNAME!common.bat" :setDefaultModularJvmOptions "!JAVA_OPTS!"
+set "JAVA_OPTS=!JAVA_OPTS! !DEFAULT_MODULAR_JVM_OPTIONS!"
+setlocal DisableDelayedExpansion
+
 rem Find jboss-modules.jar, or we can't continue
 set "JBOSS_RUNJAR=%JBOSS_HOME%\jboss-modules.jar"
 if not exist "%JBOSS_RUNJAR%" (
@@ -45,6 +60,14 @@ if not exist "%JBOSS_RUNJAR%" (
   echo Please check that you are in the bin directory when running this script.
   goto END
 )
+
+
+rem Set the module options
+set "MODULE_OPTS="
+if "%SECMGR%" == "true" (
+    set "MODULE_OPTS=-secmgr"
+)
+
 
 rem Set default module root paths
 if "x%JBOSS_MODULEPATH%" == "x" (
@@ -54,10 +77,10 @@ if "x%JBOSS_MODULEPATH%" == "x" (
 set "JAVA_OPTS=%JAVA_OPTS% -Dprogram.name=wsconsume.bat"
 
 "%JAVA%" %JAVA_OPTS% ^
-    -classpath "%JAVA_HOME%\lib\tools.jar;%JBOSS_RUNJAR%" ^
-    org.jboss.modules.Main ^
+    -jar "%JBOSS_RUNJAR%" ^
+    %MODULE_OPTS% ^
     -mp "%JBOSS_MODULEPATH%" ^
     org.jboss.ws.tools.wsconsume ^
-     %*
+    %*
 
 :END
